Fix horizontal scrolling issue

--- a/homedisplay/display/static/stylesheets/shared.scss
+++ b/homedisplay/display/static/stylesheets/shared.scss
@@ -1,8 +1,8 @@
 .custom-container {
-  padding-right: 15px;
+/*  padding-right: 15px;
   padding-left: 15px;
   margin-right: auto;
-  margin-left: auto;
+  margin-left: auto;*/
 }
 
 .progress {
